--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prismjs",
+  "name": "prismjs-papandreou",
   "version": "1.6.0",
   "description": "Lightweight, robust, elegant syntax highlighting. A spin-off project from Dabblet.",
   "main": "prism.js",
